updated style.css and hell10.js -> gave canvas a fixed size and adjusted liftspeed to get elevator right aligned with floors.

--- a/elevators_from_hell/css/style.css
+++ b/elevators_from_hell/css/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   overflow: hidden;
+  background-color: #000;
 }
 #mainCanvas {
   background-color: black;
